Fix Bug 884357 - Have sign up event button on a higher zindex to prevent description overlaying it on small screens

--- a/assets/css/events/details.less
+++ b/assets/css/events/details.less
@@ -41,6 +41,7 @@ body#events.details {
             width:      400px;
             padding-bottom: 30px;
             margin-top: 40px;
+            z-index: 1000;
 
             text-align: center;
 
